# radiodoge

./: .gitignore  README.md
RadioDogeSharp/: RadioDogeSharp.sln
RadioDogeSharp/RadioDogeSharp/: AddressBookEntry.cs  ConsoleHelper.cs  DemoHelper.cs  DogeMode.cs  DogePacketGenerator.cs  LibDogecoin.cs  ModeSelection.cs  MultipartPacket.cs  NodeAddress.cs  PacketHelper.cs  Program.cs  RDAs.cs  RadioDoge.csproj  RadioDogeTypes.cs  SPVMode.cs  SPVNode.cs  SPVNodeManager.cs  SerDogeSharp.cs  SerialPortManager.cs  SetupMode.cs  TestMode.cs  UnspentTransactionOutput.cs  asciiDoge.txt  libdogecoin.h
SerDogeSharp/: SerDogeSharp.sln
SerDogeSharp/SharpDoge/: Program.cs  SerDogeSharp.cs
docs/: readme.md
heltec-firmware/: README.md  coin.h  doge.h  heltec-firmware.ino  logoImage.h  radioDogeDisplay.cpp  radioDogeDisplay.h  radioDogeTypes.h
heltec-firmware/Images/: doge.h  receivingDogeCoin.h  sendingDogeCoin.h
libdogecoin/libdogecoin-rd-dev/: CMakeLists - Copy.txt  CMakeLists.new  CMakeLists.txt
libdogecoin/libdogecoin-rd-dev/include/dogecoin/: aes.h  libdogecoin.h  net.h  transaction.h  wallet.h
libdogecoin/libdogecoin-rd-dev/src/: aes.c  net.c  transaction.c  wallet.c
libdogecoin/libdogecoin-rd-dev/src/cli/: spvnode.c
libdogecoin/libdogecoin-rd-dev/src/libevent/cmake/: BuildType.cmake
libdogecoin/libdogecoin-rd-dev/test/: transaction_tests.c
libdogecoin/libdogecoin-rd-dev/wrappers/python/pytest/: transaction_test.py
libdogecoin/spv-resources/: main_wallet.db  spv-rd-notes-readme.txt  spv-restart.bat  startspv-rd-firstrun.bat
serdog/: CMakeLists.txt  CMakePresets.json  asciiDoge.txt  consolehelper.c  consolehelper.h  fileHelper.c  fileHelper.h  libdogecoin.h  radioDogeTypes.h  rdas.h  rdasutils.h  serdog.c  serdog.h
